# NLP-SecureSpacy

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO  VERSION  setup.cfg  setup.py
src/securespacy/: __init__.py  expressions.py  flair.py  patterns.py  tagger.py  tokenizer.py  version.py
src/securespacy/data/: actors.txt  campaigns.txt  cities.txt  convert-mitre-enterprise.py  countries.txt  intrusion_set.txt  malware-cased.txt  malware.txt  orgs.txt  products.txt  regions.txt  tools.txt  vulnerabilities.txt
src/securespacy/tests/: test_flair.py  test_tokenizer.py
