[metadata]
# replace with your username:
name = securespacy
version = file: VERSION
author = Joey Costoya
author_email = joey_costoya@trendmicro.com
description = Custom Spacy tokenizer and NER extractor for IoCs
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.trendmicro.com/CoreTech-FTR/securespacy
project_urls =
    Bug Tracker = https://github.trendmicro.com/CoreTech-FTR/securespacy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    spacy>=3.0.5
    publicsuffix2>=2.20191221
[options.packages.find]
where = src